force-app/main/default/objects/Contact/fields/Consent_To_Process__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Process__c</fullName>
    <label>Consent To Process</label>
    <type>Checkbox</type>
</CustomField>