force-app/main/default/objects/Contact/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <label>Email Verified</label>
    <type>Checkbox</type>
</CustomField>