force-app/main/default/objects/Contact/fields/Last_Data_Audit__c.field-meta.xml
<CustomField>
    <fullName>Last_Data_Audit__c</fullName>
    <label>Last Data Audit</label>
    <type>Date</type>
</CustomField>