force-app/main/default/objects/Contact/fields/Role_Importance__c.field-meta.xml
<CustomField>
    <fullName>Role_Importance__c</fullName>
    <defaultValue>None</defaultValue>
    <label>Role Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>