force-app/main/default/objects/Contact/validationRules/Require_Email_Or_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_Or_Phone</fullName>
    <active>true</active>
    <description>Data hygiene rule: new contacts need at least one reachable channel.</description>
    <errorConditionFormula>AND(ISNEW(), ISBLANK(Email), ISBLANK(Phone))</errorConditionFormula>
    <errorMessage>New contacts must have an Email or a Phone number so the support team can reach out.</errorMessage>
</ValidationRule>